--- a/Clon de google/index.html
+++ b/Clon de google/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Clon</title>
-    <script
-      src="https://kit.fontawesome.com/12668e2024.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/12668e2024.js"
+      crossorigin="anonymous"></script> 
+      <link rel="shortcut icon" type="favicon.ico" href="favicon.ico"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
